<resources>
    <string name="app_name">OctoAPP</string>
    <string name="inicio"></string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="action_settings">Settings</string>
    <string name="Loggin">Loggin</string>
    <string name="Registrar">Registrar</string>
    <string name="botonh">70dp</string>
    <string name="botonw">70dp</string>
   <string name="nombre">Nombre</string>
    <string name="password">Password</string>
    <string name="usuario">Username</string>
    <string name="correo">Correo</string>
    <string name="direccion">telefono</string>
    <string name="telefono">telefono</string>

</resources>
